# ComputerCenter

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  benchmarks.cpp  main.cpp
src/: CMakeLists.txt
src/centralServer/: CMakeLists.txt
src/centralServer/include/: centralServer.h  computeNodeStruct.h  serverBackendServices.h  serverTerminal.h
src/centralServer/lib/: centralServer.cpp  serverBackendServices.cpp  serverTerminal.cpp
src/client/: CMakeLists.txt
src/client/include/: clientCmdl.h  clientLocalTerminal.h  clientRemoteTerminal.h  clientTerminalFunctions.h
src/client/lib/: client.cpp  clientCmdl.cpp  clientLocalTerminal.cpp  clientRemoteTerminal.cpp  clientTerminalFunctions.cpp  mainClient.cpp
src/protos/: CMakeLists.txt  command.proto
src/utils/: CMakeLists.txt
src/utils/include/: spinlock.h  stringOps.h  sys_command.h  typeCheck.h
src/utils/lib/: stringOps.cpp  sys_command.cpp
test/: .gitignore  CMakeLists.txt  test_server_client.cpp  test_utils.cpp
